overflow fixed

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -64,10 +64,6 @@
   }
 }
 @media (max-width: 460px) {
-  html {
-    overflow-x: hidden;
-    overflow-y: hidden;
-  }
   .mainLeft {
     padding: 20px 10px;
   }
